[gd_scene load_steps=8 format=2]

[ext_resource path="res://Map Components/Scripts/Pulley.gd" type="Script" id=2]
[ext_resource path="res://Map Components/Resources/minimalisticplatform.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 96, 8 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 768, 80 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="platform1" type="KinematicBody2D" parent="."]
position = Vector2( -512, 0 )
collision_layer = 2
collision_mask = 15

[node name="rightrope" type="Line2D" parent="platform1"]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="leftrope" type="Line2D" parent="platform1"]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="roofpointl" type="RayCast2D" parent="platform1"]
visible = false
position = Vector2( -64, 0 )
enabled = true
cast_to = Vector2( 0, -5000 )
collision_mask = 2

[node name="roofpointr" type="RayCast2D" parent="platform1"]
visible = false
position = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 0, -5000 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform1"]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="platform1"]
position = Vector2( 0, -9.53674e-07 )
texture = ExtResource( 3 )

[node name="Area2Dplat1" type="Area2D" parent="platform1"]
visible = false
position = Vector2( 0, -16 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform1/Area2Dplat1"]
shape = SubResource( 2 )

[node name="platform2" type="KinematicBody2D" parent="."]
position = Vector2( 512, 0 )
collision_layer = 2
collision_mask = 15

[node name="rightrope" type="Line2D" parent="platform2"]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="leftrope" type="Line2D" parent="platform2"]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="roofpointl" type="RayCast2D" parent="platform2"]
visible = false
position = Vector2( -64, 0 )
enabled = true
cast_to = Vector2( 0, -5000 )
collision_mask = 2

[node name="roofpointr" type="RayCast2D" parent="platform2"]
visible = false
position = Vector2( 64, 0 )
enabled = true
cast_to = Vector2( 0, -5000 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform2"]
visible = false
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="platform2"]
position = Vector2( 2.57492e-05, 9.53674e-07 )
texture = ExtResource( 3 )

[node name="Area2Dplat2" type="Area2D" parent="platform2"]
visible = false
position = Vector2( 0, -16 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform2/Area2Dplat2"]
shape = SubResource( 4 )

[node name="Limiter" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limiter"]
shape = SubResource( 5 )
[connection signal="body_entered" from="platform1/Area2Dplat1" to="." method="_on_Area2Dplat1_body_entered"]
[connection signal="body_exited" from="platform1/Area2Dplat1" to="." method="_on_Area2Dplat1_body_exited"]
[connection signal="body_entered" from="platform2/Area2Dplat2" to="." method="_on_Area2Dplat2_body_entered"]
[connection signal="body_exited" from="platform2/Area2Dplat2" to="." method="_on_Area2Dplat2_body_exited"]
[connection signal="body_entered" from="Limiter" to="." method="_on_Limiter_body_entered"]
[connection signal="body_exited" from="Limiter" to="." method="_on_Limiter_body_exited"]
